# 3D-GRAND

./: README.md
demo/: README.md  README_local.md  app.py  convert_mesh.ipynb  model.py  pyproject.toml  requirements.txt  session.py  settings.py
demo/data/: predicted_scene_data_update_5.json  scanrefer_ground_truth_scene_graph.json
demo/llava/: constants.py  conversation.py  mm_utils.py  utils.py
demo/llava/dataset/: obj_identifier_dataset.py
demo/llava/model/: __init__.py  bbox_head.py  builder.py  consolidate.py  data_3d_util.py  iou_3d_loss.py  llava_arch.py  make_delta.py  utils.py
demo/llava/model/language_model/: llava_llama.py
demo/llava/model/multimodal_encoder/: builder.py
demo/llava/util/: tokenization.py  visualization.py
