[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-grand"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
    "gradio==4.36.1",
    "numpy",
    "tokenizers>=0.12.1",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "shortuuid",
    "peft==0.4.0",
    "transformers==4.31.0",
    "accelerate==0.21.0",
    "bitsandbytes==0.41.0",
    "scikit-learn==1.2.2",
    "sentencepiece==0.1.99",
    "einops==0.6.1",
    "einops-exts==0.0.4",
    "open3d",
    "bs4",
    "attrs",
    "cattrs",
]

[project.urls]
"Homepage" = "https://3d-grand.github.io/"

[tool.setuptools.packages.find]
exclude = ["checkpoints*", "data*"]

[tool.wheel]
exclude = ["checkpoints*", "data*"]
